# hermes-rs

./: .gitignore  AGENTS.md  ATTRIBUTION.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  MAINTAINERS.md  README.md  SECURITY.md  TODO.md  hermes.example.toml  pr_body.txt
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: build.yml  ci.yml  release.yml  test.yml
crates/hermes-cli/: Cargo.toml
crates/hermes-cli/src/: autonomous.rs  main.rs  tui.rs
crates/hermes-cli/src/tui/: action.rs  app.rs  forms.rs  mod.rs  render.rs  state.rs
crates/hermes-core/: Cargo.toml
crates/hermes-core/benches/: file_search_bench.rs  parser_bench.rs
crates/hermes-core/examples/: simple_agent.rs
crates/hermes-core/src/: agent.rs  client.rs  config.rs  context.rs  context_files.rs  distillation.rs  error.rs  gateway.rs  lib.rs  mcp.rs  memory.rs  parser.rs  platform.rs  schema.rs  skills.rs  tools.rs  trajectory.rs
crates/hermes-core/src/tools/: builtin.rs  clarify_tool.rs  code_execution.rs  datetime_tool.rs  file_tools.rs  http_tool.rs  memory_tools.rs  patch_tool.rs  sub_agent_tool.rs  terminal_tool.rs  todo_tool.rs  web_tools.rs
