[workspace]
resolver = "2"
members = [
    "crates/hermes-core",
    "crates/hermes-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Hermes-RS Team"]
license = "MIT OR Apache-2.0"
rust-version = "1.85"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.36", features = ["full"] }
async-trait = "0.1"

# Networking
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "0.8", features = ["derive"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }
config = "0.14"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
futures = "0.3"
pin-project = "1.1"
bytes = "1.6"
futures-util = "0.3"

[profile.release]
lto = true
codegen-units = 1
