[package]
name = "hermes-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Core library for Hermes-RS: A high-performance ReAct agent framework"
readme = "README.md"
keywords = ["ai", "agent", "llm", "hermes", "react"]
categories = ["ai", "asynchronous", "network-programming"]

[dependencies]
# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
pin-project = { workspace = true }

# Networking
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
toml = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
bytes = { workspace = true }
regex = "1.10"
lazy_static = "1.4"
dirs = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.4"
tracing-subscriber = { workspace = true }
serial_test = "3.2"
criterion = { version = "0.5", features = ["async_tokio"] }
tempfile = "3.27.0"

[[bench]]
name = "file_search_bench"
harness = false
